MCKIN-2054 fix alignment to top, so all borders align all the time

--- a/static/scss/courses/cohort.scss
+++ b/static/scss/courses/cohort.scss
@@ -92,6 +92,7 @@
       }
 
       tr{
+        vertical-align: top;
         td:first-child { padding-left: 0; }
         td:last-child { border-right: none; }
 
